# gTox

./: .clang-format  .gitignore  .gitmodules  .travis.yml  .travis_build_xdg_app.sh  .travis_publish_win.sh  .travis_publish_xdg_app.sh  CMakeLists.txt  Dockerfile  PKGBUILD  README.md  beautify.sh  gTox.desktop  gTox.install  main.cpp  test.txt
Database/: version_2.sql  version_3.sql  version_4.sql  version_5.sql  version_7.sql
Dialog/: DialogChat.cpp  DialogChat.h  DialogContact.cpp  DialogContact.cpp~  DialogContact.h  DialogError.cpp  DialogError.h  DialogProfile.cpp  DialogProfile.h  DialogProfileCreate.h  DialogSettings.cpp  DialogSettings.h  FirstStartAssistant.cpp  FirstStartAssistant.h  FirstStartAssistant.h.tmp
Helper/: Canberra.cpp  ToxEventCallback.cpp  ToxEventCallback.h
Icons/: CMakeLists.txt
Layout/: dialog_profile.ui
Locale/: .gitignore  CMakeLists.txt  de.po  en.po
Popover/: PopoverAddContact.cpp  PopoverAddContact.h  PopoverContextContact.cpp  PopoverContextContact.h  PopoverSettings.cpp  PopoverSettings.h  PopoverStatus.cpp  (+1 more)
Source/: CMakeLists.txt  gTox.cpp  gTox.h  main.cpp
Source/Dialog/: DialogChat.cpp  DialogChat.h  DialogContact.cpp  DialogContact.h  DialogError.cpp  DialogError.h  DialogProfile.cpp  DialogProfile.h  DialogProfileCreate.cpp  DialogProfileCreate.h  DialogSettings.cpp  DialogSettings.h
Source/Dialog/Debug/: DialogCss.cpp  DialogCss.h
Source/Helper/: Canberra.cpp  Canberra.h  Dispatcher.h  ToxEventCallback.cpp  ToxEventCallback.h  gStreamerHelper.cpp  gStreamerHelper.h  gToxBuilder.cpp  gToxBuilder.h  gToxChild.cpp  gToxChild.h  gToxFileManager.cpp  gToxFileManager.h  gToxFileRecv.cpp  gToxFileRecv.h  gToxFileRecv2.cpp  gToxFileRecv2.h  gToxFileSend.cpp  gToxFileSend.h  gToxInstance.cpp  gToxInstance.h  gToxObservable.cpp  gToxObservable.h  gToxObserver.cpp  gToxObserver.h
Source/Helper/Video/: gStreamerVideo.cpp  gStreamerVideo.h
Source/Icons/: CMakeLists.txt
Source/Layout/: CMakeLists.txt  chat_filepreview.ui  chat_filerecv.ui  dialog_assistant.ui  dialog_contact.ui  dialog_profile.ui  dialog_settings.ui  list_item_contact.ui  list_item_contact_mini.ui  list_item_notification.ui  list_item_notification_mini.ui  list_item_profile.ui  popover_settings.ui
Source/Locale/: de.po  en.po  en.po~  es.po  it.po  ru.po  ru.po~
Source/Popover/: PopoverAddContact.cpp  PopoverAddContact.h  PopoverContextContact.cpp  PopoverContextContact.h  PopoverSettings.cpp  PopoverSettings.h  PopoverStatus.cpp  PopoverStatus.h
Source/Theme/: CMakeLists.txt  common.css  dark.css  light.css  main.css
Source/Tools/: CMakeLists.txt  svg2h.cpp  text2h.cpp
Source/Tox/: Tox.cpp  Tox.h  ToxDatabase.cpp  ToxDatabase.h  ToxEvent.h  ToxException.cpp  ToxException.h  ToxProfile.cpp  ToxProfile.h  Toxmm.cpp  Toxmm.h
Source/Widget/: VideoPlayer.cpp  VideoPlayer.h  WidgetAvatar.cpp  WidgetAvatar.h  WidgetChat.cpp  WidgetChat.h  WidgetChatLine.cpp  WidgetChatLine.h  WidgetContact.cpp  WidgetContact.h  WidgetContactListItem.cpp  WidgetContactListItem.h  WidgetNotification.cpp  WidgetNotification.h
Source/Widget/Chat/: WidgetChatBubble.cpp  WidgetChatBubble.h  WidgetChatBubbleRow.cpp  WidgetChatBubbleRow.h  WidgetChatEntry.h  WidgetChatFilePreview.cpp  WidgetChatFilePreview.h  WidgetChatFileRecv.cpp  WidgetChatFileRecv.h  WidgetChatFileSend.cpp  WidgetChatFileSend.h  WidgetChatLayout.cpp  WidgetChatLayout.h  WidgetChatTextView.cpp  WidgetChatTextView.h
Source/Widget/Settings/: WidgetAbout.cpp  WidgetCache.cpp  WidgetCache.h  WidgetNetwork.cpp  WidgetProfile.cpp  WidgetProfile.h
src/: CMakeLists.txt  config.cpp  config.h  gTox.cpp  gTox.h  gtox.cpp  gtox.desktop  gtox.h  main.cpp
src/cmake/: FindFlatbuffers.cmake
src/dialog/: chat.cpp  chat.h  detachable_window.cpp  detachable_window.h  error.cpp  error.h  main.cpp  main.h  profile_create.cpp  profile_create.h  profile_selection.cpp  profile_selection.h  settings.cpp  settings.h
src/i18n/: .gitignore  CMakeLists.txt  de.po  en.po  es.po  fr.po  it.po  ru.po  stats.sh  update.sh
src/resources/: gresource.sh
src/resources/db/: CMakeLists.txt  version_006.sql  version_008.sql  version_010.sql
src/resources/flatbuffers/: CMakeLists.txt  Config.fbs  ConfigGlobal.fbs  Log.fbs
src/resources/icon/: CMakeLists.txt
src/resources/style/: CMakeLists.txt  common.css  dark.css  light.css  profile.css
src/resources/ui/: #dialog_contact.ui#  #dialog_profile.ui#  CMakeLists.txt  chat_bubble_left.ui  chat_bubble_right.ui  chat_filepreview.ui  chat_filerecv.ui  dialog_assistant.ui  dialog_chat.ui  dialog_contact.ui  dialog_detachable.ui  dialog_profile.ui  dialog_settings.ui  list_item_contact.ui  list_item_notification.ui  list_item_notification_mini.ui  list_item_profile.ui  popover_settings.ui  status_menu.ui  videoplayer.ui
src/tox/: CMakeLists.txt  av.cpp  av.h  config.cpp  config.h  core.cpp  core.h  exception.cpp  exception.h  profile.cpp  profile.h  storage.cpp  storage.h  types.cpp  types.h  utils.h
src/tox/contact/: call.cpp  call.h  contact.cpp  contact.h  manager.cpp  manager.h  receipt.cpp  receipt.h
src/tox/contact/file/: file.cpp  file.h  file_recv.cpp  file_recv.h  file_send.cpp  file_send.h  manager.cpp  manager.h
src/tox/flatbuffers/: CMakeLists.txt  Config.fbs  File.fbs
src/tox/resources/db/: CMakeLists.txt  version_001.sql  version_009.sql  version_011.sql  version_012.sql  version_013.sql
src/tox/test/: contact.t.h  core.t.h  file.t.h  global_fixture.t.h  profile.h  profile.t.h  types.t.h
src/utils/: audio_notification.cpp  audio_notification.h  builder.cpp  builder.h  debug.cpp  debug.h  dispatcher.h  gstreamer.cpp  gstreamer.h  storage.cpp  storage.h  webcam.cpp  webcam.h
src/widget/: avatar.cpp  avatar.h  chat_action.cpp  chat_action.h  chat_bubble.cpp  chat_bubble.h  chat_file.cpp  chat_file.h  chat_file_popover.cpp  chat_file_popover.h  chat_input.cpp  chat_input.h  chat_message.cpp  chat_message.h  contact.cpp  contact.h  imagescaled.cpp  imagescaled.h  label.cpp  label.h  main_menu.cpp  main_menu.h  popover.cpp  popover.h  videoplayer.cpp  videoplayer.h
(+57 files in other folders)
